@@ -5,9 +5,6 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.ArgumentMatchers.isNull;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -15,13 +12,12 @@ import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.openmetadata.schema.entity.context.ContextMemory;
 import org.openmetadata.schema.entity.context.ContextMemorySourceType;
-import org.openmetadata.schema.entity.data.ContextFile;
-import org.openmetadata.service.jdbi3.ContextMemoryRepository;
+import org.openmetadata.schema.type.EntityReference;
+import org.openmetadata.service.Entity;
 import org.openmetadata.service.llm.KnowledgePill;
 import org.openmetadata.service.llm.LLMCompletionClient;
 import org.openmetadata.service.llm.LLMCompletionException;
@@ -29,34 +25,41 @@ import org.openmetadata.service.llm.LLMCompletionException;
 @ExtendWith(MockitoExtension.class)
 class ContextMemoryExtractorTest {
 
-  @Mock private ContextMemoryRepository memoryRepository;
   @Mock private LLMCompletionClient llmClient;
+
+  private static EntityReference fileRef(UUID id, String name) {
+    return new EntityReference().withId(id).withName(name).withType(Entity.CONTEXT_FILE);
+  }
+
+  private ContextMemoryExtractor extractor() {
+    return new ContextMemoryExtractor(llmClient);
+  }
+
+  private List<ContextMemory> derive(String text, EntityReference source) {
+    return extractor().derive(text, source, ContextMemorySourceType.FILE_EXTRACTION).memories();
+  }
 
   @Test
   void createsOneMemoryPerExtractedPill() {
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName("report").withExtractedText("text");
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
         .thenReturn(
             List.of(
                 new KnowledgePill("T1", "Q1", "A1", "S1", "Faq"),
                 new KnowledgePill("T2", "Q2", "A2", "S2", "Note")));
 
-    int created = new ContextMemoryExtractor(memoryRepository, llmClient).extract(file);
+    List<ContextMemory> memories = derive("text", source);
 
-    assertEquals(2, created);
-    ArgumentCaptor<ContextMemory> captor = ArgumentCaptor.forClass(ContextMemory.class);
-    verify(memoryRepository, times(2)).create(isNull(), captor.capture());
-    ContextMemory first = captor.getAllValues().get(0);
+    assertEquals(2, memories.size());
+    ContextMemory first = memories.getFirst();
     assertEquals(ContextMemorySourceType.FILE_EXTRACTION, first.getSourceType());
-    assertEquals(file.getId(), first.getSourceFile().getId());
+    assertEquals(source.getId(), first.getSourceEntity().getId());
     assertEquals("Q1", first.getQuestion());
   }
 
   @Test
   void dedupesByQuestionAndSkipsInvalid() {
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName("report").withExtractedText("text");
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
         .thenReturn(
             List.of(
@@ -64,40 +67,50 @@ class ContextMemoryExtractorTest {
                 new KnowledgePill("T", "dup", "A2", "S", "Note"),
                 new KnowledgePill("T", null, "A", "S", "Note")));
 
-    int created = new ContextMemoryExtractor(memoryRepository, llmClient).extract(file);
-
-    assertEquals(1, created);
-    verify(memoryRepository, times(1)).create(isNull(), any());
+    assertEquals(1, derive("text", source).size());
   }
 
   @Test
-  void deriveDoesNotPersist() {
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName("report").withExtractedText("text");
+  void deriveReturnsMemoriesAndChunkStats() {
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
         .thenReturn(List.of(new KnowledgePill("T", "Q", "A", "S", "Faq")));
 
     ContextMemoryExtractor.DeriveResult result =
-        new ContextMemoryExtractor(memoryRepository, llmClient).derive(file, "text");
+        extractor().derive("text", source, ContextMemorySourceType.FILE_EXTRACTION);
 
     assertEquals(1, result.memories().size());
     assertEquals(1, result.chunksTotal());
     assertEquals(1, result.chunksProcessed());
-    verify(memoryRepository, never()).create(any(), any());
   }
 
   @Test
-  void truncatesLongFileNamesToFitEntityNameLimit() {
-    String longName = "f".repeat(256);
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName(longName).withExtractedText("text");
+  void tagsMemoriesWithTheGivenSourceTypeAndEntity() {
+    EntityReference pageRef =
+        new EntityReference().withId(UUID.randomUUID()).withName("runbook").withType(Entity.PAGE);
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
         .thenReturn(List.of(new KnowledgePill("T", "Q", "A", "S", "Faq")));
 
-    List<ContextMemory> memories =
-        new ContextMemoryExtractor(memoryRepository, llmClient).derive(file, "text").memories();
+    ContextMemory memory =
+        extractor()
+            .derive("text", pageRef, ContextMemorySourceType.PAGE_EXTRACTION)
+            .memories()
+            .getFirst();
 
-    String name = memories.getFirst().getName();
+    assertEquals(ContextMemorySourceType.PAGE_EXTRACTION, memory.getSourceType());
+    assertEquals(pageRef.getId(), memory.getSourceEntity().getId());
+    assertEquals(Entity.PAGE, memory.getSourceEntity().getType());
+  }
+
+  @Test
+  void truncatesLongSourceNamesToFitEntityNameLimit() {
+    String longName = "f".repeat(256);
+    EntityReference source = fileRef(UUID.randomUUID(), longName);
+    when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
+        .thenReturn(List.of(new KnowledgePill("T", "Q", "A", "S", "Faq")));
+
+    String name = derive("text", source).getFirst().getName();
+
     assertTrue(name.length() <= 256, "memory name must fit the entityName limit");
     assertTrue(name.startsWith("f".repeat(ContextMemoryExtractor.MAX_NAME_BASE_LENGTH) + "-"));
   }
@@ -106,14 +119,13 @@ class ContextMemoryExtractorTest {
   void partialChunkFailureStillYieldsPillsAndStats() {
     String paragraph = "Lorem ipsum dolor sit amet consectetur adipiscing elit. ".repeat(200);
     String text = (paragraph + "\n\n").repeat(12); // > 60k chars => several chunks
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName("report").withExtractedText(text);
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
         .thenThrow(new LLMCompletionException("provider exploded"))
         .thenReturn(List.of(new KnowledgePill("T", "Q", "A", "S", "Faq")));
 
     ContextMemoryExtractor.DeriveResult result =
-        new ContextMemoryExtractor(memoryRepository, llmClient).derive(file, text);
+        extractor().derive(text, source, ContextMemorySourceType.FILE_EXTRACTION);
 
     assertEquals(1, result.memories().size(), "pills from surviving chunks must be kept");
     assertTrue(result.chunksTotal() >= 2);
@@ -122,35 +134,33 @@ class ContextMemoryExtractorTest {
 
   @Test
   void allChunksFailingThrows() {
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName("report").withExtractedText("text");
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
         .thenThrow(new LLMCompletionException("provider exploded"));
 
-    ContextMemoryExtractor extractor = new ContextMemoryExtractor(memoryRepository, llmClient);
+    ContextMemoryExtractor extractor = extractor();
 
-    assertThrows(LLMCompletionException.class, () -> extractor.derive(file, "text"));
+    assertThrows(
+        LLMCompletionException.class,
+        () -> extractor.derive("text", source, ContextMemorySourceType.FILE_EXTRACTION));
   }
 
   @Test
   void skipsLlmWhenNoText() {
-    ContextFile file = new ContextFile().withId(UUID.randomUUID()).withName("report");
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
 
-    int created = new ContextMemoryExtractor(memoryRepository, llmClient).extract(file);
-
-    assertEquals(0, created);
+    assertEquals(0, derive(null, source).size());
   }
 
   @Test
   void chunksLongTextIntoMultipleLlmCallsAndDedupesAcrossChunks() {
     String paragraph = "Lorem ipsum dolor sit amet consectetur adipiscing elit. ".repeat(200);
     String text = (paragraph + "\n\n").repeat(30); // ~340k chars => 6 chunks of 60k
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName("report").withExtractedText(text);
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class)))
         .thenReturn(List.of(new KnowledgePill("T", "same question", "A", "S", "Faq")));
 
-    int created = new ContextMemoryExtractor(memoryRepository, llmClient).extract(file);
+    List<ContextMemory> memories = derive(text, source);
 
     int expectedChunks =
         Math.min(
@@ -160,17 +170,16 @@ class ContextMemoryExtractorTest {
         .completeStructured(any(), any(), eq(KnowledgePill.class));
     verify(llmClient, org.mockito.Mockito.atMost(expectedChunks))
         .completeStructured(any(), any(), eq(KnowledgePill.class));
-    assertEquals(1, created, "identical pills from different chunks must dedupe to one");
+    assertEquals(1, memories.size(), "identical pills from different chunks must dedupe to one");
   }
 
   @Test
   void capsChunksForVeryLongText() {
     String text = "word ".repeat(ContextMemoryExtractor.MAX_PROMPT_CHARS * 2); // 600k chars
-    ContextFile file =
-        new ContextFile().withId(UUID.randomUUID()).withName("report").withExtractedText(text);
+    EntityReference source = fileRef(UUID.randomUUID(), "report");
     when(llmClient.completeStructured(any(), any(), eq(KnowledgePill.class))).thenReturn(List.of());
 
-    new ContextMemoryExtractor(memoryRepository, llmClient).extract(file);
+    extractor().derive(text, source, ContextMemorySourceType.FILE_EXTRACTION);
 
     verify(llmClient, org.mockito.Mockito.times(ContextMemoryExtractor.MAX_CHUNKS))
         .completeStructured(any(), any(), eq(KnowledgePill.class));
